content changes and alignment fixes

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -187,8 +187,8 @@ body {
     .image-transform-section {
 
         & > img {
-            height: 500px;
-            width: 550px;
+            height: 100%;
+            width: 100%;
 
             @media (max-width: $information-mobile-xl) {
                width: 400px;
